--- a/src/DevHive.Angular/src/app/components/profile/profile.component.css
+++ b/src/DevHive.Angular/src/app/components/profile/profile.component.css
@@ -49,6 +49,7 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 #other-main-info > * {
